fix: correcting responsivity on mobile in the main page related to the select element

--- a/css/grid.css
+++ b/css/grid.css
@@ -21,4 +21,16 @@
     .column {
       flex: 1;
     }
+
+    label.column{
+        flex: 0.12;
+    }
+
+    select.column{
+        flex: 0.12;
+    }
+
+    select.column{
+        flex: 0.12;
+    }
 }
